[main-private] fix in DiscoveryResultSetMapper to avoid issues related to unimplemented features of unmodifiable lists